# Otto-microROS

./: .gitattributes  .gitignore  LICENSE.md  PLAN.md  README.md  setup.sh  start.sh
docker/: Dockerfile  Dockerfile.firmware  Dockerfile.ros2  docker-compose.yml  entrypoint.sh
docs/: building.md  calibration.md  docker.md  flashing.md  hardware.md  mapping_demo.md  troubleshooting.md  wiring.md
firmware/: platformio.ini
firmware/scripts/: compress_html.py
firmware/src/: battery_monitor.cpp  battery_monitor.h  buzzer.cpp  buzzer.h  drive_controller.cpp  drive_controller.h  led_controller.cpp  led_controller.h  led_ring_status.cpp  led_ring_status.h  line_sensor.cpp  line_sensor.h  main.cpp  otto_config.h  portal_page.html  ultrasonic_sensor.cpp  ultrasonic_sensor.h  wifi_config.cpp  wifi_config.h  wifi_credentials.h.example  wifi_portal.cpp  wifi_portal.h
hardware/: ZGX Otto.step
ros2_ws/src/otto_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/otto_bringup/config/: slam_toolbox.yaml
ros2_ws/src/otto_bringup/launch/: otto_mapping_demo.launch.py  otto_microros.launch.py  otto_teleop.launch.py
ros2_ws/src/otto_bringup/scripts/: otto_odom_publisher.py  otto_visualizer.py  ultrasonic_to_laserscan.py
ros2_ws/src/otto_description/: CMakeLists.txt  package.xml
ros2_ws/src/otto_description/launch/: display.launch.py
ros2_ws/src/otto_description/meshes/: battery_cover.stl  body.stl  body_clips.stl  body_top_lines.stl  body_top_pattern.stl  bracket.stl  bracket_left.stl  bracket_right.stl  caster.stl  (+24 more)
scripts/: calibrate_kinematics.py  export_meshes.py
(+2 files in other folders)
